--- a/packages/rooms/schlafzimmer.yaml
+++ b/packages/rooms/schlafzimmer.yaml
@@ -45,3 +45,14 @@ automation:
     action:
       service: light.toggle
       entity_id: light.sz_ks_ambient_lights
+
+  - alias: sz_ks_auto_off
+    trigger:
+      platform: state
+      entity: light.sz_ks_ambient_lights
+      to: 'on'
+      for:
+        minutes: 10
+    action:
+      service: light.turn_off
+      entity_id: light.sz_ks_ambient_lights
