--- a/travis_secrets.yaml
+++ b/travis_secrets.yaml
@@ -1,3 +1,4 @@
+DARK_SKY_API_KEY: 00000000000000000000
 EMBY_API_KEY: 00000000000000000000
 HOMEASSISTANT_LATITUDE: 50.000000
 HOMEASSISTANT_LONGITUDE: 10.000000
