--- a/configuration.yaml
+++ b/configuration.yaml
@@ -62,6 +62,14 @@ ring:
 #       - sensor.last_boot # Comes from 'systemmonitor' sensor platform
 #       - sensor.date
 
+calendar:
+  - platform: caldav
+    url: !secret CALDAV_URL_FAMILY
+    custom_calendars:
+      - name: Urlaub
+        calendar: Family
+        search: 'Urlaub'
+
 frontend:
   themes: !include_dir_merge_named themes
 
