--- a/packages/klingel.yaml
+++ b/packages/klingel.yaml
@@ -31,9 +31,9 @@ binary_sensor:
       - ding
       - motion
 
-# input_text:
-#   klingel_random:
-#     name: klingel_random
+input_text:
+  ring_random:
+    name: ring_random
 
 timer:
   klingel_cycle:
@@ -54,19 +54,19 @@ script:
             {%- else -%}
               2
             {%- endif -%}
-  # doorbell_set_random:
-  #   sequence:
-  #     - service: input_text.set_value
-  #       entity_id: input_text.klingel_random
-  #       data_template:
-  #         value: >-
-  #           {%- macro random_int(len) -%}
-  #             {%- for n in range(len) -%}
-  #               {{ [0,1,2,3,4,5,6,7,8,9]|random }}
-  #             {%- endfor -%}
-  #           {%- endmacro -%}
-  #           {%- set parts = [random_int(8), random_int(4), random_int(4), random_int(4), random_int(12)] -%}
-  #           {{ parts|join('-') }}
+  doorbell_set_random:
+    sequence:
+      - service: input_text.set_value
+        entity_id: input_text.ring_random
+        data_template:
+          value: >-
+            {%- macro random_int(len) -%}
+              {%- for n in range(len) -%}
+                {{ [0,1,2,3,4,5,6,7,8,9]|random }}
+              {%- endfor -%}
+            {%- endmacro -%}
+            {%- set parts = [random_int(8), random_int(4), random_int(4), random_int(4), random_int(12)] -%}
+            {{ parts|join('-') }}
 
 automation:
   - alias: doorbell_open_door
@@ -102,35 +102,35 @@ automation:
   #           push:
   #             category: 'klingel'
 
-  # - alias: doorbell_download_last_motion_video
-  #   trigger:
-  #     platform: state
-  #     entity_id: binary_sensor.ring_haustur_motion
-  #     to: 'on'
-  #   action:
-  #     - delay:
-  #         seconds: 60
-  #     - service: downloader.download_file
-  #       data_template:
-  #         url: '{{ states.camera.haustur.attributes.video_url }}'
-  #         subdir: 'front_door'
-  #         filename: 'last_motion.mp4'
-  #         overwrite: true
+  - alias: doorbell_download_last_motion_video
+    trigger:
+      platform: state
+      entity_id: binary_sensor.ring_haustur_motion
+      to: 'on'
+    action:
+      - delay:
+          seconds: 60
+      - service: downloader.download_file
+        data_template:
+          url: '{{ states.camera.haustur.attributes.video_url }}'
+          subdir: 'ring'
+          filename: 'last_motion.mp4'
+          overwrite: true
 
-  # - alias: doorbell_download_last_ring_video
-  #   trigger:
-  #     platform: state
-  #     entity_id: binary_sensor.ring_haustur_ding
-  #     to: 'on'
-  #   action:
-  #     - delay:
-  #         seconds: 90
-  #     - service: script.doorbell_set_random
-  #     - service: downloader.download_file
-  #       data_template:
-  #         url: '{{ states.camera.haustur.attributes.video_url }}'
-  #         subdir: 'front_door'
-  #         filename: '{{ states("input_text.klingel_random") }}.mp4'
+  - alias: doorbell_download_last_ring_video
+    trigger:
+      platform: state
+      entity_id: binary_sensor.ring_haustur_ding
+      to: 'on'
+    action:
+      - delay:
+          seconds: 90
+      - service: script.doorbell_set_random
+      - service: downloader.download_file
+        data_template:
+          url: '{{ states.camera.haustur.attributes.video_url }}'
+          subdir: 'ring'
+          filename: '{{ states("input_text.ring_random") }}.mp4'
 
   - alias: doorbell_haus_notify
     trigger:
@@ -145,17 +145,6 @@ automation:
     action:
       - service: timer.start
         entity_id: timer.klingel_cycle
-      - service: notify.all_ios_devices
-        data_template:
-          title: 'Klingeling...'
-          message: 'Jemand wartet an der Haustür'
-          data:
-            # url: https://google.de # ring app url, have to reverse-engineer
-            push:
-              category: klingel
-      - condition: state
-        entity_id: group.familie
-        state: 'home'
       - service: script.doorbell
         data:
           ringtone_id: 10
@@ -164,7 +153,25 @@ automation:
           message: 'Klingel: Haustür unten'
           data:
             icon: '/root/.homeassistant/www/icons/baseline-notifications_active.png'
-      ## Licht blinken lassen
+      - service: script.doorbell_set_random
+      - service: camera.snapshot
+        entity_id: camera.haustur
+        data:
+          filename: '/root/.homeassistant/www/downloads/ring/snapshots/{{ states("input_text.ring_random") }}.jpg'
+      - delay:
+          seconds: 5
+      - service: notify.all_ios_devices
+        data_template:
+          title: 'Klingeling...'
+          message: 'Jemand wartet an der Haustür'
+          data:
+            # url: https://google.de # ring app url, have to reverse-engineer
+            push:
+              category: klingel
+            attachment:
+              url: 'https://hass.derstrassi.net/local/downloads/ring/snapshots/{{ states("input_text.ring_random") }}.jpg'
+              content-type: jpg
+
 
   - alias: doorbell_wohnung_notify
     trigger:
@@ -179,31 +186,16 @@ automation:
     action:
       - service: timer.start
         entity_id: timer.klingel_cycle
-      # - service: input_text.set_value
-      #   entity_id: input_text.klingel_random
-      #   data_template:
-      #     value: >-
-      #       {%- macro random_int(len) -%}
-      #         {%- for n in range(len) -%}
-      #           {{ [0,1,2,3,4,5,6,7,8,9]|random }}
-      #         {%- endfor -%}
-      #       {%- endmacro -%}
-      #       {%- set parts = [random_int(8), random_int(4), random_int(4), random_int(4), random_int(12)] -%}
-      #       {{ parts|join('-') }}
-      # - service: camera.snapshot
-      #   entity_id: camera.arthur_cam
-      #   data:
-      #     filename: '/root/.homeassistant/www/snapshots/front_door/{{ states("input_text.klingel_random") }}.jpg'
-      # - service: notify.all_ios_devices
-      #   data_template:
-      #     title: 'Klingeling...'
-      #     message: 'Jemand wartet vor der Wohnungstür'
+      - service: notify.all_ios_devices
+        data_template:
+          title: 'Klingeling...'
+          message: 'Jemand wartet vor der Wohnungstür'
           # data:
           #   push:
           #     category: klingel
-            # attachment:
-            #   url: 'https://hass.derstrassi.net/local/snapshots/front_door/{{ states("input_text.klingel_random") }}.jpg'
-            #   content-type: jpg
+          #   attachment:
+          #     url: 'https://hass.derstrassi.net/local/snapshots/front_door/{{ states("input_text.ring_random") }}.jpg'
+          #     content-type: jpg
       - condition: state
         entity_id: group.familie
         state: 'home'
@@ -215,4 +207,3 @@ automation:
           message: 'Klingel: Wohnungstür'
           data:
             icon: '/root/.homeassistant/www/icons/baseline-notifications_active.png'
-      ## Licht blinken lassen
