--- a/packages/rooms/schlafzimmer.yaml
+++ b/packages/rooms/schlafzimmer.yaml
@@ -35,6 +35,26 @@ light:
       - light.sz_ks_led2
 
 automation:
+  - alias: sz_ks_ambient_motion_on
+    trigger:
+      platform: state
+      entity_id: binary_sensor.motion_sensor_158d0002ec7e05
+      to: 'on'
+    action:
+      service: light.turn_on
+      entity_id: light.sz_ks_ambient_lights
+
+  - alias: sz_ks_ambient_motion_off
+    trigger:
+      platform: state
+      entity_id: binary_sensor.motion_sensor_158d0002ec7e05
+      to: 'off'
+      for:
+        seconds: 5
+    action:
+      service: light.turn_off
+      entity_id: light.sz_ks_ambient_lights
+
   - alias: sz_ks_aqara_button
     trigger:
       platform: event
