--- a/packages/denon_avr.yaml
+++ b/packages/denon_avr.yaml
@@ -28,3 +28,21 @@ switch:
           id: B3
           unit: 24
           state: 'off'
+
+automation:
+  - alias: wz_subwoofer_on
+    trigger:
+      - platform: state
+        entity_id: media_player.denon_avr_x1100w
+        to: 'on'
+    action:
+      - service: homeassistant.turn_on
+        entity_id: switch.rf_wz_subwoofer
+  - alias: wz_subwoofer_off
+    trigger:
+      - platform: state
+        entity_id: media_player.denon_avr_x1100w
+        to: 'off'
+    action:
+      - service: homeassistant.turn_off
+        entity_id: switch.rf_wz_subwoofer
