--- a/packages/denon_avr.yaml
+++ b/packages/denon_avr.yaml
@@ -27,7 +27,7 @@ automation:
         to: 'playing'
     action:
       - service: homeassistant.turn_on
-        entity_id: switch.rf_wz_subwoofer
+        entity_id: switch.wz_subwoofer
   - alias: wz_subwoofer_off
     trigger:
       - platform: state
@@ -35,4 +35,4 @@ automation:
         to: 'off'
     action:
       - service: homeassistant.turn_off
-        entity_id: switch.rf_wz_subwoofer
+        entity_id: switch.wz_subwoofer
