--- a/packages/denon_avr.yaml
+++ b/packages/denon_avr.yaml
@@ -25,6 +25,9 @@ automation:
       - platform: state
         entity_id: media_player.denon_avr_x1100w
         to: 'playing'
+    condition:
+      - condition: time
+        after: '08:00:00'
     action:
       - service: homeassistant.turn_on
         entity_id: switch.wz_subwoofer
