--- a/packages/rooms/wohnzimmer.yaml
+++ b/packages/rooms/wohnzimmer.yaml
@@ -162,6 +162,8 @@ automation:
           entity_id: binary_sensor.switch_158d00013f85d3
           click_type: long_click_press
     action:
+      - service: homeassistant.toggle
+        entity_id: switch.wz_lichtkugel
       - service: light.toggle
         entity_id: light.wz_ambient_lights
       - delay:
