--- a/configuration.yaml
+++ b/configuration.yaml
@@ -75,7 +75,7 @@ frontend:
   themes: !include_dir_merge_named themes
 
 tts:
-  - platform: google
+  - platform: google_translate
     language: 'de'
 
 tado:
