--- a/packages/rooms/flur.yaml
+++ b/packages/rooms/flur.yaml
@@ -26,26 +26,11 @@ homeassistant:
       friendly_name: Nachtlicht Decke
       icon: 'mdi:lightbulb-on-outline'
 
-group:
-  flur:
-    name: Flur
-    control: hidden
-    entities:
-      - sensor.temperature_158d00018734bb
-      - sensor.humidity_158d00018734bb
-      - sensor.motion_sensor_flur_last_seen
-      - switch.floor_light_wall
-      - light.gateway_light_286c0788a9dd
-      - switch.floor_light_ceiling
-      - light.floor_yeelight
-      - script.yeelight_flur_pink
-      - script.yeelight_flur_weiss
-
-light:
-  - platform: yeelight
-    devices:
-      192.168.10.87:
-        name: floor_yeelight
+yeelight:
+  devices:
+    192.168.10.87:
+      name: floor_yeelight
+      save_on_change: true
 
 switch:
   - platform: mqtt
