--- a/packages/rooms/wohnzimmer.yaml
+++ b/packages/rooms/wohnzimmer.yaml
@@ -56,7 +56,7 @@ switch:
           unit: 24
           state: 'off'
 
-# light:
+light:
 #   - platform: flux_led
 #     devices:
       # 192.168.10.136:
