--- a/automations/welcome.yaml
+++ b/automations/welcome.yaml
@@ -5,7 +5,7 @@
     to: 'on'
   condition:
     - condition: state
-      entity_id: group.familie
+      entity_id: person.familie
       state: 'home'
     - condition: state
       entity_id: binary_sensor.motion_sensor_158d0001e562ad
@@ -49,7 +49,7 @@
     to: 'on'
   condition:
     - condition: state
-      entity_id: group.familie
+      entity_id: person.familie
       state: 'home'
     - condition: state
       entity_id: binary_sensor.motion_sensor_158d0001e562ad
