--- a/binary_sensor/alle_schlafen.yaml
+++ b/binary_sensor/alle_schlafen.yaml
@@ -3,7 +3,7 @@
   name: 'Alle Schlafen'
   probability_threshold: 0.85
   observations:
-    - entity_id: 'group.familie'
+    - entity_id: 'person.familie'
       prob_given_true: 0.99
       prob_given_false: 0.5
       platform: 'state'
