--- a/travis_secrets.yaml
+++ b/travis_secrets.yaml
@@ -6,6 +6,7 @@ HOMEASSISTANT_LONGITUDE: 10.000000
 LG_TV_ACCESS_TOKEN: 00000000000000000000
 LG_TV_MAC: aaaaaaaaaaaa
 MQTT_CLIENT_ID: homeassistant-1
+GITHUB_ACCESS_TOKEN: 00000000000000000000
 MQTT_PASSWORD: 00000000000000000000
 MQTT_USERNAME: user
 NZBGET_PASSWORD: password
