--- a/configuration.yaml
+++ b/configuration.yaml
@@ -43,6 +43,9 @@ hacs:
 
 wake_on_lan:
 
+logger:
+  default: info
+
 # recorder:
 #   purge_keep_days: 7
 #   db_url: mysql://homeassistant@192.168.10.95/homeassistant?charset=utf8
